tests/fixtures/invalid/app_without_exec.desktop
[Desktop Entry]
Type=Application
Name=App Without Exec
# Missing both Exec and DBusActivatable
